# static-analysis

./: Cargo.toml  DEVELOPING.md  Makefile
src/: check.rs  main.rs  parser.rs  sym2.rs  symbolic.rs  typed.rs
wasm_examples/: Makefile  README.md  add.c  call_indirect.c  common.h  cycles.c  empty_func.c  if_simple.c  import.c  mixed_mem.c  structures.c
