[package]
name = "wack"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.57", features = ["derive"] }
foldhash = { version = "0.2.0", features = ["nightly"] }
la-arena = "0.3.1"
miette = { version = "7.6.0", features = ["derive", "fancy"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
wasmparser = { version = "0.244.0", default-features = false, features = ["std", "validate"] }
wasmtime-types = "25.0.3"
